--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/svelte": "^6.0.1",
     "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/vercel": "^1.0.0",
     "@fontsource-variable/jetbrains-mono": "^5.1.1",
     "@fontsource/roboto": "^5.1.0",
     "@iconify-json/fa6-brands": "^1.2.1",
@@ -32,7 +33,8 @@
     "@tailwindcss/typography": "^0.5.15",
     "astro": "^4.16.13",
     "astro-compress": "^2.3.5",
-    "astro-icon": "^1.1.1",
+    "astro-icon": "^1.1.4",
+    "chart.js": "^4.4.7",
     "hastscript": "^9.0.0",
     "markdown-it": "^14.1.0",
     "mdast-util-to-string": "^4.0.0",
