--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "@types/mdast": "^4.0.4",
     "@types/sanitize-html": "^2.13.0",
     "postcss-import": "^16.1.0",
-    "postcss-nesting": "^13.0.1"
+    "postcss-nesting": "^13.0.1",
+    "only-allow": "^1.2,1"
   },
   "packageManager": "pnpm@9.14.4"
 }
