--- a/package.json
+++ b/package.json
@@ -67,6 +67,6 @@
     "@types/sanitize-html": "^2.13.0",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
-    "@only-allow": "^1.2.1"
+    "only-allow": "^1.2.1"
   }
 }
